--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2887,6 +2887,9 @@ body {
     padding: .75rem;
   }
 }
+.cid-qMMLNOn208 .body-item I {
+  color: #fe525b;
+}
 .cid-qMMLYceJNr {
   padding-top: 30px;
   padding-bottom: 30px;
